[package]
name = "loopal-hooks"
version.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[lib]
doctest = false
test = false

[dependencies]
loopal-error = { workspace = true }
loopal-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
