[package]
name = "loopal-ipc"
version.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[lib]
doctest = false

[dependencies]
loopal-error = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
loopal-agent-client = { workspace = true }
loopal-protocol = { workspace = true }
loopal-test-support = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-util"] }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
