[package]
name = "loopal-kernel"
version.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[lib]
doctest = false
test = false

[dependencies]
loopal-error = { workspace = true }
loopal-config = { workspace = true }
loopal-tool-api = { workspace = true }
loopal-provider-api = { workspace = true }
loopal-tools = { workspace = true }
loopal-provider = { workspace = true }
loopal-hooks = { workspace = true }
loopal-mcp = { workspace = true }
loopal-message = { workspace = true }
loopal-sandbox = { workspace = true }
loopal-backend = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
