[package]
name = "loopal-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
loopal-error = { workspace = true }
loopal-tool-api = { workspace = true }
loopal-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
