[package]
name = "loopal-mcp"
version.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[lib]
doctest = false

[dependencies]
loopal-error = { workspace = true }
loopal-tool-api = { workspace = true }
loopal-config = { workspace = true }
rmcp = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }
opener = "0.7"
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
loopal-test-support = { workspace = true }
tokio = { workspace = true }
